[package]
name = "eplus"
version = "0.1.0"
authors = ["David Kern <david@mju.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = "0.12.1"
clap = "2.33.3"

[build-dependencies]
positron_build = { path = "../positron_build" }
